Windows Phone 8 sucks
WP8 don't know what to do with data:image/svg+xml, so I had to put SVG
inline and refer .svg files on the CSS for backgrounds and so on...;
Also, fixing some WP8 bouncing issues;
And some other things I don't remember now.

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:ng="http://angularjs.org" lang="pt-br" ng-csp="ng-csp">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ng="http://angularjs.org" lang="pt-br" ng-csp="ng-csp">
 <head>
     <meta http-equiv="Content-Type" content="image/svg+xml; text/html; charset=utf-8;">
 
